[gd_scene load_steps=7 format=3 uid="uid://dcqno4bxf8gk8"]

[ext_resource type="Script" path="res://scripts/MyScreens.gd" id="1_oku06"]
[ext_resource type="Texture2D" uid="uid://csoyrgad2yinb" path="res://assets/textures/ui/gear.png" id="2_g28o0"]
[ext_resource type="PackedScene" uid="uid://cv21p2wov3q4s" path="res://scenes/title.tscn" id="3_sxm8j"]
[ext_resource type="PackedScene" uid="uid://dijavvxlkg5ir" path="res://scenes/pause.tscn" id="3_trslv"]
[ext_resource type="PackedScene" uid="uid://f3b6rclljclp" path="res://scenes/game_over.tscn" id="4_bxe6c"]

[sub_resource type="LabelSettings" id="LabelSettings_pc3ap"]
line_spacing = 5.0

[node name="Screens" type="CanvasLayer"]
process_mode = 3
layer = 101
script = ExtResource("1_oku06")

[node name="TitleScreen" parent="." instance=ExtResource("3_sxm8j")]

[node name="PauseScreen" parent="." instance=ExtResource("3_trslv")]
visible = false

[node name="GameOverScreen" parent="." instance=ExtResource("4_bxe6c")]
visible = false

[node name="Debug" type="Control" parent="."]
z_index = 4096
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ConsoleLog" type="Control" parent="Debug" groups=["debug_console"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlackBG" type="ColorRect" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.666667)

[node name="BuildNumberLabel" type="Label" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -263.0
offset_top = 8.0
offset_right = 264.0
offset_bottom = 31.0
grow_horizontal = 2
text = "Build 0.1.0"

[node name="ScrollContainer" type="ScrollContainer" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 51.0
offset_top = 59.0
offset_right = -51.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Debug/ConsoleLog/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LogLabel" type="Label" parent="Debug/ConsoleLog/ScrollContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_pc3ap")
autowrap_mode = 3

[node name="ToggleConsole" type="TextureButton" parent="Debug"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
texture_normal = ExtResource("2_g28o0")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="Debug/ToggleConsole" to="." method="_on_toggle_console_pressed"]
